// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onSelect is fired on click 1`] = `
<body>
  <div>
    <button
      aria-controls="test-tab"
      aria-selected="false"
      class="sc-bdnxRM jvWqZJ"
      id="test"
      role="tab"
      tabindex="-1"
    >
      tab text
    </button>
  </div>
</body>
`;

exports[`renders TabNavItem correctly 1`] = `
<body>
  <div>
    <button
      aria-controls="test-tab"
      aria-selected="false"
      class="sc-bdnxRM jvWqZJ"
      id="test"
      role="tab"
      tabindex="-1"
    >
      tab text
    </button>
  </div>
</body>
`;

exports[`renders TabNavItem correctly when selected 1`] = `
<body>
  <div>
    <button
      aria-controls="test-tab"
      aria-selected="true"
      class="sc-bdnxRM dnvMwT"
      id="test"
      role="tab"
      tabindex="-1"
    >
      tab text
    </button>
  </div>
</body>
`;
